// =====================================================================
// SwiftCare — Database Architecture v2
// PostgreSQL 17 (Supabase)
// Includes all schema hardening changes
// =====================================================================

// ---------------------------------------------------------------------
// ENUMS
// ---------------------------------------------------------------------
// user_role: 'patient' | 'provider' | 'admin'
// appointment_kind: 'in_person' | 'telehealth'
// appointment_state: 'scheduled' | 'checked_in' | 'in_progress' | 'completed' | 'cancelled' | 'no_show'
// prescription_state: 'active' | 'completed' | 'cancelled'
// allergy_severity: 'mild' | 'moderate' | 'severe' | 'life_threatening'
// allergy_type: 'drug' | 'food' | 'environmental'
// reminder_kind: '24h' | '2h'
// document_kind: 'visit_summary' | 'prescription' | 'lab_report'

// ---------------------------------------------------------------------
// EXTENSIONS
// btree_gist  — exclusion constraints with scalar + range types
// vector      — pgvector for RAG embeddings
// pg_trgm     — fuzzy drug_name / allergen search
// ---------------------------------------------------------------------


// =====================================================================
// CORE SCHEMA
// =====================================================================

Table users {
  id              bigint        [pk, increment, note: 'bigint — avoids 2.1B ceiling']
  email           varchar(255)  [not null, note: 'unique via partial index uq_users_email_live on lower(email) WHERE deleted_at IS NULL']
  hashed_password varchar(255)  [not null]
  full_name       varchar(150)  [not null]
  role            user_role     [not null, note: 'enum: patient | provider | admin']
  is_active       boolean       [not null, default: true]
  created_at      timestamptz   [not null, default: `now()`]
  updated_at      timestamptz   [not null, default: `now()`]
  deleted_at      timestamptz   [note: 'Soft delete — NULL means active']

  indexes {
    (lower(email)) [unique, name: 'uq_users_email_live', note: 'WHERE deleted_at IS NULL']
  }
}

Table patients {
  id            bigint      [pk, increment]
  user_id       bigint      [not null, note: 'unique via partial index uq_patients_user_live WHERE deleted_at IS NULL']
  date_of_birth date        [not null, note: 'CHECK date_of_birth <= CURRENT_DATE']
  phone         varchar(20) [not null]
  blood_group   varchar(5)  [note: "CHECK: one of A+/A-/B+/B-/AB+/AB-/O+/O- or NULL"]
  address       varchar(500)
  created_at    timestamptz [not null, default: `now()`]
  updated_at    timestamptz [not null, default: `now()`]
  deleted_at    timestamptz [note: 'Soft delete']

  indexes {
    (user_id) [name: 'uq_patients_user_live', note: 'UNIQUE WHERE deleted_at IS NULL']
  }

  note: 'Trigger: trg_patients_role_check enforces users.role = patient before INSERT/UPDATE'
}

Table providers {
  id                   bigint          [pk, increment]
  user_id              bigint          [not null, note: 'unique via partial index uq_providers_user_live WHERE deleted_at IS NULL']
  specialization       varchar(100)    [not null]
  license_number       varchar(50)     [not null, note: 'unique via partial index uq_providers_license_live WHERE deleted_at IS NULL']
  consultation_fee     decimal(10,2)   [not null, note: 'CHECK >= 0']
  default_slot_minutes integer         [not null, default: 30, note: 'CHECK BETWEEN 5 AND 240']
  timezone             text            [not null, default: 'Asia/Kolkata', note: 'IANA tz name — CHECK (now() AT TIME ZONE timezone IS NOT NULL)']
  created_at           timestamptz     [not null, default: `now()`]
  updated_at           timestamptz     [not null, default: `now()`]
  deleted_at           timestamptz     [note: 'Soft delete']

  indexes {
    (user_id)        [name: 'uq_providers_user_live',    note: 'UNIQUE WHERE deleted_at IS NULL']
    (license_number) [name: 'uq_providers_license_live', note: 'UNIQUE WHERE deleted_at IS NULL']
    (specialization) [name: 'ix_providers_specialization']
  }

  note: 'Trigger mirrors patients_role_check for role = provider'
}

Table provider_availability {
  id          bigint  [pk, increment]
  provider_id bigint  [not null]
  weekday     integer [not null, note: '0=Monday 6=Sunday — CHECK BETWEEN 0 AND 6']
  start_time  time    [not null]
  end_time    time    [not null, note: 'CHECK end_time > start_time']
  created_at  timestamptz [not null, default: `now()`]
  updated_at  timestamptz [not null, default: `now()`]

  indexes {
    (provider_id, weekday) [name: 'idx_avail_provider']
  }

  note: 'EXCLUDE USING gist (provider_id WITH =, weekday WITH =, timerange(start_time, end_time) WITH &&) — no overlapping windows per provider per day. Requires custom timerange type.'
}

Table appointments {
  id               bigint            [pk, increment]
  patient_id       bigint            [not null]
  provider_id      bigint            [not null]
  appointment_type appointment_kind  [not null, note: 'enum: in_person | telehealth']
  status           appointment_state [not null, default: 'scheduled']
  scheduled_start  timestamptz       [not null]
  scheduled_end    timestamptz       [not null, note: 'CHECK scheduled_end > scheduled_start']
  checked_in_at    timestamptz       [note: 'NULL until patient checks in']
  completed_at     timestamptz       [note: 'NOT NULL when status = completed (enforced by CHECK)']
  reason           varchar(500)      [not null]
  notes            text
  room_number      varchar(20)       [note: 'in_person only — CHECK NULL when telehealth']
  meeting_link     varchar(500)      [note: 'telehealth only — CHECK NULL when in_person']
  created_at       timestamptz       [not null, default: `now()`]
  updated_at       timestamptz       [not null, default: `now()`]
  deleted_at       timestamptz       [note: 'Soft delete — triggers block hard DELETE']

  indexes {
    (provider_id, scheduled_start, id) [name: 'idx_appt_provider_start', note: 'DESC — WHERE deleted_at IS NULL']
    (patient_id,  scheduled_start, id) [name: 'idx_appt_patient_start',  note: 'DESC — WHERE deleted_at IS NULL']
    (status, scheduled_start)          [name: 'idx_appt_status_start',   note: 'WHERE deleted_at IS NULL']
    (scheduled_start)                  [name: 'idx_appt_reminder_scan',  note: "WHERE status = 'scheduled' AND deleted_at IS NULL"]
    (id, patient_id)                   [unique, name: 'appointments_id_patient_uq',  note: 'Supports composite FK from prescriptions']
    (id, provider_id)                  [unique, name: 'appointments_id_provider_uq', note: 'Supports composite FK from prescriptions']
  }

  note: '''
  CONSTRAINTS:
  - appointments_no_provider_overlap: EXCLUDE USING gist (provider_id WITH =, tstzrange(scheduled_start, scheduled_end, "[)") WITH &&) WHERE status NOT IN (cancelled, no_show) AND deleted_at IS NULL
  - appointments_no_patient_overlap:  EXCLUDE USING gist (patient_id  WITH =, tstzrange(scheduled_start, scheduled_end, "[)") WITH &&) WHERE status NOT IN (cancelled, no_show) AND deleted_at IS NULL
  - appointments_type_fields: CHECK (in_person → meeting_link IS NULL) OR (telehealth → room_number IS NULL)
  - appointments_completed_needs_timestamp: CHECK status <> completed OR completed_at IS NOT NULL
  - appointments_checkin_before_complete: CHECK checked_in_at IS NULL OR completed_at IS NULL OR completed_at >= checked_in_at
  - Trigger: block hard DELETE
  '''
}

Table visit_summaries {
  id             bigint      [pk, increment]
  appointment_id bigint      [unique, not null]
  diagnosis      text        [not null]
  vitals         jsonb       [note: 'Keep for non-core fields. Core vitals promoted to typed columns below.']
  bp_systolic    smallint    [note: 'CHECK BETWEEN 50 AND 300']
  bp_diastolic   smallint    [note: 'CHECK BETWEEN 30 AND 200']
  heart_rate     smallint    [note: 'CHECK BETWEEN 20 AND 300']
  temp_celsius   numeric(4,1)[note: 'CHECK BETWEEN 25.0 AND 45.0']
  spo2_percent   smallint    [note: 'CHECK BETWEEN 50 AND 100']
  weight_kg      numeric(5,2)
  followup_date  date
  created_at     timestamptz [not null, default: `now()`]
  updated_at     timestamptz [not null, default: `now()`]

  note: 'document_url removed — replaced by documents table. Trigger blocks hard DELETE.'
}

Table prescriptions {
  id             bigint            [pk, increment]
  appointment_id bigint            [not null]
  provider_id    bigint            [not null]
  patient_id     bigint            [not null]
  status         prescription_state [not null, default: 'active']
  notes          text
  created_at     timestamptz       [not null, default: `now()`]
  updated_at     timestamptz       [not null, default: `now()`]
  deleted_at     timestamptz       [note: 'Soft delete — trigger blocks hard DELETE']

  indexes {
    (patient_id, created_at) [name: 'idx_presc_patient',     note: 'DESC — WHERE deleted_at IS NULL']
    (appointment_id)         [name: 'idx_presc_appointment']
  }

  note: '''
  document_url removed — replaced by documents table.
  Composite FKs enforce referential integrity:
  - fk_presc_appt_patient:  FOREIGN KEY (appointment_id, patient_id)  REFERENCES appointments(id, patient_id)
  - fk_presc_appt_provider: FOREIGN KEY (appointment_id, provider_id) REFERENCES appointments(id, provider_id)
  These guarantee prescription.patient_id == appointment.patient_id at DB level.
  '''
}

Table prescription_items {
  id              bigint         [pk, increment]
  prescription_id bigint         [not null]
  drug_name       varchar(200)   [not null, note: 'gin trgm index for fuzzy search']
  dosage_amount   decimal(8,3)   [not null, note: 'CHECK > 0']
  dosage_unit     varchar(20)    [not null, note: "CHECK IN ('mg','g','mcg','ml','IU','tablet','drop','puff')"]
  frequency_per_day integer      [not null, note: 'CHECK BETWEEN 1 AND 24']
  duration_days   integer        [not null, note: 'CHECK > 0']
  instructions    varchar(300)
  created_at      timestamptz    [not null, default: `now()`]
  updated_at      timestamptz    [not null, default: `now()`]

  indexes {
    (prescription_id) [name: 'idx_presc_items_parent']
    (drug_name)       [name: 'idx_presc_items_drug_trgm', note: 'USING gin (drug_name gin_trgm_ops)']
  }
}

Table allergies {
  id                  bigint           [pk, increment]
  patient_id          bigint           [not null]
  allergen            varchar(100)     [not null]
  allergen_normalized varchar(100)     [not null, note: 'auto-set by DB trigger: strip().lower() — never trust app layer']
  allergy_type        allergy_type     [not null, note: 'enum: drug | food | environmental']
  severity            allergy_severity [not null, note: 'enum: mild | moderate | severe | life_threatening']
  reaction            text             [note: 'Free text — no length cap, Pydantic validates']
  recorded_by_id      bigint           [note: 'Provider who recorded it — SET NULL on provider delete']
  created_at          timestamptz      [not null, default: `now()`]
  updated_at          timestamptz      [not null, default: `now()`]
  deleted_at          timestamptz      [note: 'Soft delete']

  indexes {
    (patient_id, allergen_normalized) [unique, name: 'uq_active_patient_allergen', note: 'WHERE deleted_at IS NULL — soft-delete-safe uniqueness']
    (patient_id, allergen_normalized) [name: 'ix_allergy_drug_lookup',             note: 'WHERE deleted_at IS NULL AND allergy_type = drug — fast prescription conflict check']
  }

  note: 'allergen_normalized set by SQLAlchemy event listener (before_insert/before_update). Prescription service queries only drug-type allergies during conflict check.'
}

Table documents {
  id              bigint        [pk, increment, note: 'GENERATED ALWAYS AS IDENTITY']
  patient_id      bigint        [not null]
  appointment_id  bigint
  doc_type        document_kind [not null, note: 'enum: visit_summary | prescription | lab_report']
  s3_bucket       text          [not null]
  s3_key          text          [not null, note: 'Store key — generate presigned URL at read time']
  content_type    text          [not null, default: 'application/pdf']
  size_bytes      bigint        [not null, note: 'CHECK > 0']
  checksum_sha256 char(64)      [note: 'SHA-256 of file bytes for integrity verification']
  generated_at    timestamptz   [not null, default: `now()`]
  created_at      timestamptz   [not null, default: `now()`]
  updated_at      timestamptz   [not null, default: `now()`]

  indexes {
    (s3_bucket, s3_key) [unique, name: 'uq_documents_object']
    (patient_id, doc_type, generated_at) [name: 'idx_documents_patient', note: 'DESC']
    (appointment_id)                     [name: 'idx_documents_appt']
  }

  note: 'Replaces document_url varchar columns on visit_summaries and prescriptions. Never store presigned URLs — they expire.'
}

Table refresh_tokens {
  id         bigint      [pk, increment]
  user_id    bigint      [not null]
  token_hash varchar(64) [unique, not null, note: 'SHA-256 of raw token — raw token never stored']
  expires_at timestamptz [not null]
  revoked    boolean     [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id)    [name: 'idx_refresh_user',   note: 'WHERE revoked = false']
    (expires_at) [name: 'idx_refresh_expiry', note: 'WHERE revoked = false']
  }
}

// =====================================================================
// RAG / AI SCHEMA
// =====================================================================

Table visit_embeddings {
  id              bigint  [pk, increment]
  patient_id      bigint  [not null]
  visit_summary_id bigint [not null]
  content         text    [not null, note: 'Chunked text that was embedded']
  embedding       vector(1536) [not null, note: 'HNSW index for cosine ANN search']
  chunk_index     integer [not null, default: 0, note: 'Position of chunk in full document']
  embedding_model text    [not null, default: 'text-embedding-3-small', note: 'Track model — needed for re-embedding on model swap']
  created_at      timestamptz [not null, default: `now()`]

  indexes {
    (patient_id)      [name: 'idx_visit_emb_patient']
    (embedding)       [name: 'idx_visit_emb_hnsw', note: 'USING hnsw (embedding vector_cosine_ops) WITH (m=16, ef_construction=64)']
    (visit_summary_id, chunk_index, embedding_model) [unique, name: 'uq_visit_emb_chunk']
  }

  note: 'Patient-scoped cosine search: WHERE patient_id = $1 ORDER BY embedding <=> $query LIMIT 5'
}

// =====================================================================
// AUDIT SCHEMA
// =====================================================================

Table audit_log {
  id          bigint      [pk, increment, note: 'GENERATED ALWAYS AS IDENTITY']
  actor_id    bigint      [note: 'NULL if system action']
  actor_role  user_role
  action      text        [not null, note: "one of: 'read' | 'create' | 'update' | 'delete'"]
  entity_type text        [not null, note: "e.g. 'patient' | 'appointment' | 'prescription'"]
  entity_id   bigint      [not null]
  ip_address  inet
  metadata    jsonb
  occurred_at timestamptz [not null, default: `now()`]

  indexes {
    (entity_type, entity_id, occurred_at) [name: 'idx_audit_entity', note: 'DESC']
    (actor_id, occurred_at)               [name: 'idx_audit_actor',  note: 'DESC']
  }

  note: 'PARTITION BY RANGE (occurred_at). One partition per year — drop old partition for retention, never DELETE rows.'
}

// =====================================================================
// NOTIFY SCHEMA (swiftcare-notify — isolated, no cross-service FKs)
// =====================================================================

Table notify.reminder_logs {
  id              bigint          [pk, increment]
  appointment_id  bigint          [not null, note: 'Logical ref — no FK across service boundary']
  patient_email   varchar(255)    [not null]
  reminder_type   reminder_kind   [not null, note: 'enum: 24h | 2h']
  sent_at         timestamptz     [not null, default: `now()`]
  success         boolean         [not null, default: true]
  error           text

  indexes {
    (appointment_id, reminder_type) [unique, name: 'uq_reminder_once', note: 'WHERE success = true — failed attempts can retry, successful sends never duplicate']
  }
}

Table notify.task_logs {
  id         bigint      [pk, increment]
  task_id    varchar(255)[unique, not null]
  task_name  varchar(255)[not null]
  status     text        [not null, note: "CHECK IN ('pending','success','failed')"]
  payload    jsonb       [note: 'Structured task input — jsonb not text']
  error      text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (status, created_at) [name: 'idx_task_logs_status', note: "WHERE status IN ('pending','failed') DESC"]
  }
}

Table notify.email_logs {
  id               bigint  [pk, increment, note: 'GENERATED ALWAYS AS IDENTITY']
  idempotency_key  text    [unique, not null, note: 'Prevents duplicate sends on Celery retry']
  recipient        text    [not null]
  subject          text    [not null]
  document_id      bigint  [note: 'Logical ref to documents.id — no FK across services']
  status           text    [not null, note: "CHECK IN ('queued','sent','failed')"]
  error            text
  sent_at          timestamptz
  created_at       timestamptz [not null, default: `now()`]
}


// =====================================================================
// RELATIONSHIPS
// =====================================================================

Ref: patients.user_id > users.id [delete: restrict]
Ref: providers.user_id > users.id [delete: restrict]
Ref: provider_availability.provider_id > providers.id [delete: cascade]

Ref: appointments.patient_id  > patients.id  [delete: restrict]
Ref: appointments.provider_id > providers.id [delete: restrict]

Ref: visit_summaries.appointment_id - appointments.id [delete: restrict]

// prescriptions use composite FKs (appointment_id, patient_id) and (appointment_id, provider_id)
// to enforce that prescription.patient_id == appointment.patient_id at DB level
Ref: prescriptions.appointment_id > appointments.id [delete: restrict]

Ref: prescription_items.prescription_id > prescriptions.id [delete: cascade]

Ref: allergies.patient_id     > patients.id  [delete: cascade]
Ref: allergies.recorded_by_id > providers.id [delete: "set null"]

Ref: documents.patient_id     > patients.id     [delete: restrict]
Ref: documents.appointment_id > appointments.id [delete: restrict]

Ref: visit_embeddings.patient_id       > patients.id       [delete: cascade]
Ref: visit_embeddings.visit_summary_id > visit_summaries.id [delete: cascade]

Ref: refresh_tokens.user_id > users.id [delete: cascade]

Ref: audit_log.actor_id > users.id [delete: "set null"]
